test/known_problems/should_pass/unary_plus.erl
-module(unary_plus).

-spec m(+1) -> {}.
m(+1) ->
    {}.
